--- a/doc/report1/report1.tex
+++ b/doc/report1/report1.tex
@@ -36,13 +36,15 @@ A number of companies are providing a remote synchronized directory service, wit
 During the last 15 years, a lot of promising technology has been developed that can eliminate the need for 3rd party providers while offering the same high quality service. 
 Systems based on a Distributed Hash Table (DHT) have allowed lookup services to be implemented in a completely decentralised network, allowing any participating nodes to efficiently retrieve data. Implementations of DHTs are being successfully used in various peer-to-peer Internet services, such as BitTorrent and Coral Content Distribution Network \cite{coral}.
 
-Such technology is just as well applicable to distributed filesystems. Attempts to implement such systems have been made, with the most prominent names being CFS \cite{cfs}, Pastis \cite{pastis}, OceanStore \cite{oceanstore}, Ivy \cite{ivy}, Infinit \cite{towards}. Except for Freenet \cite{freenet}, which has a completely different focus on anonymity, all of these filesystems were designed for academic research, with performance analyses based mostly on simulations, or otherwise controlled unrealistic environments, and so far no implementations are being used outside the research community by the wider public.
+Such technology is just as well applicable to distributed filesystems. Attempts to implement such systems have been made, with the most prominent names being CFS \cite{cfs}, Freenet \cite{freenet}, Pastis \cite{pastis}, OceanStore \cite{oceanstore}, Ivy \cite{ivy}, Infinit \cite{towards}. Except for Freenet \cite{freenet}, which has a completely different focus on anonymity, all of these filesystems were designed for academic research, with performance analyses based mostly on simulations, or otherwise controlled unrealistic environments, and so far no implementations are being used outside the research community by the wider public.
 
-In fact one of the main open problems identified by a survey of such file systems, is the lack of performance analyses on real world deployments of P2P file systems \cite{surveyofopenproblems}, as even in the cases where the experiments were executed without a simulator \cite{infinit}, the characteristics of environments used for testing were different from what is expected to happen in the real world. 
+In fact one of the main open problems identified by a survey of such file systems, is the lack of performance analyses on real world deployments of P2P file systems \cite{surveyofopenproblems}, as even in the cases where the experiments were executed without a simulator \cite{infinit}, there was either a very small number of nodes connected to the network, or some of the characteristics of the were network not representative of the real world (such as the network was geographically isolated to one college campus, or the network consisted of nodes which are always on).
 
-The purpose of this MInf dissertation is to build a Distributed Peer-to-peer File System, capable of performing similar function to the proprietary services such as DropBox \cite{dropbox}, but without depending on any specific vendor, so that the contents of the person's private folder are encrypted and then distributed among other users of the system. The implementation would be open source, and make use of efficient, well-tested algorithms, and open source libraries, and would be produced in such a way that users could easily deploy it on their machines. This would address the problem that no distributed P2P filesystems have so far been adopted in real world situations, and therefore have not been exposed to actual real world problems. The availability of such a project would hopefully stimulate further research.
+The purpose of this MInf dissertation is to design and build a Distributed Peer-to-peer File System, capable of performing similar function to the proprietary services such as DropBox \cite{dropbox}, but without depending on any specific vendor, so that the contents of the person's private folder are encrypted and then distributed among other users of the system. The implementation would be open source, and make use of efficient, well-tested algorithms and open source libraries, and would be produced in such a way that users could easily deploy it on their machines. 
 
-Although the goal of the project is to produce a real world implementation, an environment for testing the prototype must still exist. However, instead of using a network simulator, the goal is to use a light-weight virtualisation solution, LXC Linux containers to run nodes of the system. This will also allow for comparing this filesystem with other peer-to-peer distributed filesystems.
+This would address the problem that no distributed P2P filesystems have so far been adopted in real world situations, and therefore have not been exposed to actual real world problems. The availability of such a project would hopefully stimulate further research.
+
+Although the goal of the project is to produce a real world implementation, an environment for testing the prototype must still exist. However, instead of using a network simulator, the goal is to use a light-weight virtualisation solution, LXC Linux containers to run nodes of the system. This will also allow for comparing this filesystem with other peer-to-peer distributed filesystems, without requiring the use of a full fledged network simulator.
 
 % Approach
 % Unaddressed problems
@@ -50,6 +52,7 @@ Although the goal of the project is to produce a real world implementation, an e
 % Security (encrypted file contents)
 % Reading files larger than there currently is space available
 % index!!!
+% what happens when nodes go off??????????
 %
 
 \section{Project Overview}
