--- a/doc/report1/report1.tex
+++ b/doc/report1/report1.tex
@@ -15,16 +15,16 @@
 \maketitle
 
 \begin{abstract}
-Although the popularity of services similar to DropBox and Google Drive proves that 
-users find such cloud storage file hosting services useful,
-currently no decentralised and distributed peer-to-peer filesystem exists that could provide
+Although the popularity of services similar to DropBox and Google Drive is a good basis to believe that 
+users find such cloud storage file hosting services useful, all of these services depend on third party vendors. Currently no decentralised and distributed peer-to-peer filesystem exists that could provide
 a service of similar quality but without dependence on any single vendor.
-In fact, one of the identified problems in peer-to-peer filesystem research is the lack of a system that could be deployed in real world situations. 
-This project attempts to implement such a system,
-and to provide a comparison with other systems that have similar goals, by using common
-filesystem benchmarks. 
 
-An environment for running experiments on such a filesystem has been setup, with preliminary results showing it is suitable for testing such a filesystem.
+In fact, one of the main identified problems in this field is the lack of a distributed peer-to-peer filesystem that could be deployed in such real world situations. 
+
+This project attempts to implement such a system,
+and to provide a comparison with other systems that have similar goals, by using the standard Andrew filesystem benchmark. 
+
+So far an environment for running experiments on such a filesystem has been setup, with preliminary results showing it is suitable for testing such a filesystem.
 A prototype of the filesystem is currently being worked on.
 
 \end{abstract}
@@ -38,13 +38,14 @@ Systems based on a Distributed Hash Table (DHT) have allowed lookup services to 
 
 Such technology is just as well applicable to distributed filesystems. Attempts to implement such systems have been made, with the most prominent names being CFS \cite{cfs}, Freenet \cite{freenet}, Pastis \cite{pastis}, OceanStore \cite{oceanstore}, Ivy \cite{ivy}, Infinit \cite{towards}. Except for Freenet \cite{freenet}, which has a completely different focus on anonymity, all of these filesystems were designed for academic research, with performance analyses based mostly on simulations, or otherwise controlled unrealistic environments, and so far no implementations are being used outside the research community by the wider public.
 
-In fact one of the main open problems identified by a survey of such file systems, is the lack of performance analyses on real world deployments of P2P file systems \cite{surveyofopenproblems}, as even in the cases where the experiments were executed without a simulator \cite{infinit}, there was either a very small number of nodes connected to the network, or some of the characteristics of the were network not representative of the real world (such as the network was geographically isolated to one college campus, or the network consisted of nodes which are always on).
+In fact one of the main open problems identified by a survey of such file systems, is the lack of performance analyses on real world deployments of P2P file systems \cite{surveyofopenproblems}. 
+Even in the cases where the experiments were executed without a simulator \cite{infinit}, there was either a very small number of nodes connected to the network, or some of the characteristics of the network were not representative of the real world: in one case, the network was geographically isolated to one college campus, and in another, the network consisted of nodes which were all always connected to the Internet.
 
-The purpose of this MInf dissertation is to design and build a Distributed Peer-to-peer File System, capable of performing similar function to the proprietary services such as DropBox \cite{dropbox}, but without depending on any specific vendor, so that the contents of the person's private folder are encrypted and then distributed among other users of the system. The implementation would be open source, and make use of efficient, well-tested algorithms and open source libraries, and would be produced in such a way that users could easily deploy it on their machines. 
+The purpose of this MInf dissertation is to design and build a Distributed Peer-to-peer File System, capable of performing similar function to the proprietary services such as DropBox \cite{dropbox}, but without depending on any specific vendor, so that the contents of the person's private folder are encrypted and then distributed among other users of the system. The implementation will be open source, and make use of efficient, well-tested algorithms and open source libraries, and will be provided in an easy to install package, so that users can easily deploy it on their machines. 
 
-This would address the problem that no distributed P2P filesystems have so far been adopted in real world situations, and therefore have not been exposed to actual real world problems. The availability of such a project would hopefully stimulate further research.
+The availability of such a prototype will address the problem that no distributed P2P filesystems have so far been exposed to real world situations. The availability of such a project will hopefully stimulate further research.
 
-Although the goal of the project is to produce a real world implementation, an environment for testing the prototype must still exist. However, instead of using a network simulator, the goal is to use a light-weight virtualisation solution to run nodes of the system. This will also allow for comparing this filesystem with other peer-to-peer distributed filesystems, without requiring the use of a full fledged network simulator.
+Although the goal of the project is to produce an implementation targeting the real world, an environment for testing the prototype must still exist. Instead of using a network simulator, the goal is to use a light-weight virtualisation solution to run nodes of the system. This will allow for comparing this filesystem with other peer-to-peer distributed filesystems, without requiring the use of a full fledged network simulator.
 
 % Approach
 % Unaddressed problems
@@ -58,9 +59,11 @@ Although the goal of the project is to produce a real world implementation, an e
 
 \section{Project Overview}
 
-The following section will present a complete overview of the project, starting from the lowest protocol level and ending with the design of the frontend. 
+The following section will present an overview of the project. The design of a few key parts of the project has not yet been finalized, and although a placeholder solution is provided, a proper solution will be presented in the future.
 
-Currently there is no clear consensus in the literature on what distributed file system components lead to achieving the best possible performance (why?) In fact the most common benchmark used to test such file systems, the Andrew benchmark, has itself received a lot of criticism \cite{kernelb} due to the workload not being realistic, and due to few I/O operations leading to a lack of meaningful results. Nevertheless, it is still considered the standard benchmark for filesystem performance \cite{kernelb}. Designing a superior benchmark is however out of scope of this project, and would in fact prevent any attempt to compare this file system with other file systems.
+This distributed peer-to-peer filesystem uses a layered architecture. At the lowest level is the Chord protocol and algorithm for mapping keys to nodes. On top of Chord sits an implementation of a peer-to-peer distributed hash table (DHT). This DHT is used by the FUSE userspace file system interface to retrieve, update and delete files.
+
+Currently there is no clear consensus in the literature on what distributed file system components lead to achieving the best possible performance (why?) 
 
 \subsection{Preparation}
 
@@ -83,8 +86,7 @@ Nodes maintain a routing table that accelerates lookups. In a system of $N$ node
 On top of this lowest level, sits the DHT (distributed hash table). Like a hash table, a DHT provides a mapping from keys to values. It allows inserting a value with a certain key, and allows the value to be retrieved, by providing the key that was used to insert it. The DHT operates on a network of nodes, and uses the key-based routing protocol to determine the sought node. The canonical DHT for the Chord protocol is the CFS DHash, which the following implementation will be based on. (how is yours different?)
 
 \subsubsection{Operations}
-To b
-In order to be suitable for usage in a distributed filesystem, The DHT must provide an interface supporting the following operations:
+The DHT will provide an interface supporting the following operations:
 
 \begin{itemize}
 \item insert(key, value)
@@ -104,12 +106,17 @@ Deletion will be implemented simply by deleting the file path from the user's fi
 
 The filesystem may be deployed on storage drives of varying size, including ones that provide less space than some of the files stored on the world-wide filesystem. 
 
+\subsection{}
 %TODO: describe how CFS does this
 
 \subsubsection{Storage}
 
 \subsection{Versioning}
-Due to the way replication works, not all copies of the file currently in the network are going to be up-to-date. To ensure that the user always receives the most recent copy, when performing a lookup, a weighted voting scheme is going to be introduced. The replicas will be assigned a version number, and each replica of a file will be assigned a certain number of votes. Whenever the file is accessed, or written to, a certain number of $r$ votes to read a file, and a certain number of $w$ votes to write a file will be collected, such that $r + w$ is more than the total number of votes assigned to file. This guarantees that any lookup will always retrieve the most recent version of the file \cite{versioning}.
+Not all copies of the file currently in the network are going to be up-to-date. 
+
+To ensure that the user always receives the most recent copy, when performing a lookup, a weighted voting scheme is going to be introduced. The replicas will be assigned a version number, and each replica of a file will be assigned a certain number of votes. Whenever the file is accessed, or written to, a certain number of $r$ votes to read a file, and a certain number of $w$ votes to write a file will be collected, such that $r + w$ is more than the total number of votes assigned to file. 
+
+This guarantees that any lookup will always retrieve the most recent version of the file \cite{versioning}.
 
 \subsection{Security}
 
@@ -169,7 +176,8 @@ Nevertheless, some of the benchmarks will require up to 10000 nodes at a time. E
 
 \subsubsection{Andrew benchmark}
 
-The standard method to evaluate performance in the world of distributed filesystems is the Andrew benchmark \cite{andrewscale}, consisting of:
+Although the most common benchmark used to test distributed peer-to-peer file systems, the Andrew benchmark, has received a lot of criticism due to the workload not being realistic, and due to few I/O operations leading to a lack of meaningful results, it is still considered the standard benchmark for filesystem performance \cite{kernelb}. Designing a superior benchmark is out of scope of this project, and would in fact prevent any attempt to compare this file system with other file systems.
+The Andrew benchmark \cite{andrewscale}, consists of:
 \begin{enumerate}
 \item creating a directory hierarchy;
 \item copying files into the created directories;
